# Learning-Python

./: .gitignore  README.md  hello_world.py
Built-in Functions/: Built-in Functions.ipynb  hello.txt
Create a Python API in 12 minutes/: README.md  main.py
Data Structures/Arrays/: README.md  arrays.py
Data Structures/Hash Tables/: README.md  hash table.py
Data Structures/Sets/: README.md  sets.py
Decorators/: decorators.py  harness_print_debugger.py  print_debugger.py
Enumerations/: Build Enumerations of Constants With Python's Enum – Real Python.md
F-Strings/: README.md  f-strings.ipynb  f-strings.py
Flask/: README.md  pyproject.toml
Kit 100 - Programming Preparation/: README.md
Kit 100 - Programming Preparation/Lectures & Tutorials/: Kit100.ipynb
Linkedin Learning - Learning Python/Ch2 - Basics/: challenge_solution.py  loops_finished.py  variables_finished.py
Linkedin Learning - Learning Python/Ch4 - Dates and Times/: calendars_start.py  challenge_solution.py  timedeltas_start.py
Linkedin Learning - Learning Python/Ch5 - Internet Data/: inetdata_start.py  (+3 more)
NiceGUI/: README.md  requirements.txt
Object Oriented Python/: Python objects.ipynb  README.md  exercises-1.ipynb
Strings/: replace.py  split.py
Textual-Framework/: README.md  pyproject.toml
Tkinter/: README.md
Tuples/: tuples.ipynb
Various/: Day Finder.py  bang.py
WebSite - Python Morsels/: README.md
WebSite - Real Python/: README.md
eBook - Fluent Python - 2nd Edition/: README.md
eBook - Python Tips and Tricks/: Merging Dictionaries.py  Printing Horizontally.py  README.md
(+222 files in other folders)
