[tool.poetry]
name = "textual-framework"
version = "0.1.0"
description = ""
authors = ["Paul Watts <paul.watts@me.com>"]
readme = "README.md"
packages = [{include = "textual_framework"}]

[tool.poetry.dependencies]
python = "^3.11"
textual = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
